[project]
name = "zhang-camera-calibration"
version = "1.0.0"
description = "Python implementation of zhang-camera-calibration"
requires-python = ">=3.12"
dependencies = [
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "fonttools==4.58.1",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.3",
    "numpy==2.2.6",
    "opencv-python==4.11.0.86",
    "packaging==25.0",
    "pillow==11.2.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "scipy==1.15.3",
    "six==1.17.0"
]
